# isoxya-plugin-elasticsearch

./: .dockerignore  .dockerrepo  .env.example  .gitignore  .gitmodules  Dockerfile  LICENSE  LICENSE.dependencies.txt  README.md  cabal.config  cabal.project.freeze  docker-compose.yml  docker-compose.yml.example  isoxya-plugin-elasticsearch.cabal  isx-pipe-elasticsearch.cabal  isx-plug-elasticsearch.cabal  isx-plugin-elasticsearch.cabal
ci/: Dockerfile  meta.sh  package.sh  package.yml  sh  test.sh  test.yml
misc/streams/stable/: docker-compose.yml
misc/streams/testing/: docker-compose.yml
misc/streams/unstable/: docker-compose.yml
pkg/: .dockerignore  Dockerfile
src/: Prelude.hs
src/ISX/Pipe/Elasticsearch/: Route.hs
src/ISX/Pipe/Elasticsearch/Resource/: Common.hs
src/ISX/Pipe/Elasticsearch/Zone/Common/: Apex.hs  Data.hs
src/ISX/Plug/: Elasticsearch.hs
src/ISX/Plug/Elasticsearch/: Core.hs  Init.hs  Resource.hs  Route.hs  Types.hs
src/ISX/Plug/Elasticsearch/Resource/: Common.hs
src/ISX/Plug/Elasticsearch/Zone/: Apex.hs  Data.hs
src/ISX/Plug/Elasticsearch/Zone/Common/: Apex.hs  Data.hs
src/ISX/Plugin/Elasticsearch/: Route.hs
src/ISX/Plugin/Elasticsearch/Resource/: Common.hs
src/ISX/Plugin/Elasticsearch/Zone/Common/: Apex.hs  Data.hs
src/Isoxya/Plugin/: Elasticsearch.hs
src/Isoxya/Plugin/Elasticsearch/: Core.hs  Init.hs  Resource.hs  Type.hs  Types.hs
src/Isoxya/Plugin/Elasticsearch/Endpoint/: Apex.hs  Data.hs
test/ISX/: Test.hs
test/ISX/Pipe/Elasticsearch/Zone/Common/: ApexSpec.hs  DataSpec.hs
test/ISX/Plug/Elasticsearch/: Test.hs
test/ISX/Plug/Elasticsearch/Zone/: ApexSpec.hs  DataSpec.hs
test/ISX/Plug/Elasticsearch/Zone/Common/: ApexSpec.hs  DataSpec.hs
test/ISX/Plugin/Elasticsearch/Zone/Common/: ApexSpec.hs  DataSpec.hs
test/Isoxya/Plugin/Elasticsearch/: Test.hs
test/Isoxya/Plugin/Elasticsearch/Endpoint/: ApexSpec.hs  DataSpec.hs
test/fixture/results/example.com/: crawler-html.ndjson  link-checker.ndjson  spellchecker-empty-data.ndjson  spellchecker.ndjson
