cabal-version:          3.0
name:                   isoxya-plugin-elasticsearch
version:                0.0.0
synopsis:               Isoxya Elasticsearch plugin
license:                BSD-3-Clause
author:                 Nic Williams <tp@tiredpixel.com>
maintainer:             Nic Williams <tp@tiredpixel.com>
build-type:             Simple
--------------------------------------------------------------------------------
common common-properties
    build-depends:
        base                            ==  4.13.*,
        relude
    mixins:
        base                            hiding (Prelude),
        relude                          (Relude as Prelude)
    default-language:   Haskell2010
    default-extensions:
        OverloadedStrings
    ghc-options:
        -Wall
        -ddump-minimal-imports
--------------------------------------------------------------------------------
library lib-common
    import:             common-properties
    exposed-modules:
        TiredPixel.Common.Isoxya.PlugStrm
        TiredPixel.Common.Isoxya.Snap.PlugStrm
        TiredPixel.Common.Net
        TiredPixel.Common.Snap.CoreUtils
        TiredPixel.Common.Snap.Main
        TiredPixel.Common.URI
    other-modules:
        TiredPixel.Common.Cursor
    build-depends:
        aeson,
        bytestring,
        conduit,
        conduit-extra,
        http-conduit,
        http-types,
        network-uri,
        regex-compat,
        resourcet,
        safe,
        snap-core,
        snap-extras,
        snap-server,
        time,
        unix,
        unordered-containers,
    hs-source-dirs:
        lib/common/src
--------------------------------------------------------------------------------
library lib-isoxya-plugin-elasticsearch
    import:             common-properties
    exposed-modules:
        Isoxya.Plugin.Elasticsearch
        Isoxya.Plugin.Elasticsearch.Core
    other-modules:
        Paths_isoxya_plugin_elasticsearch
        --
        Isoxya.Plugin.Elasticsearch.Init
        Isoxya.Plugin.Elasticsearch.Resource
        Isoxya.Plugin.Elasticsearch.Types
        Isoxya.Plugin.Elasticsearch.Zone.Apex
        Isoxya.Plugin.Elasticsearch.Zone.Data
    build-depends:
        lib-common,
        --
        aeson,
        bytestring,
        cryptonite,
        http-conduit,
        http-types,
        lens,
        lens-aeson,
        network-uri,
        scientific,
        snap,
        snap-core,
        snap-extras,
        text,
        time,
        vector,
    hs-source-dirs:
        src
--------------------------------------------------------------------------------
executable isoxya-plugin-elasticsearch
    import:             common-properties
    main-is:            Elasticsearch.hs
    other-modules:
        Paths_isoxya_plugin_elasticsearch
    build-depends:
        lib-common,
        lib-isoxya-plugin-elasticsearch,
        --
        lens,
        network-uri,
        snap,
    hs-source-dirs:
        src/Isoxya/Plugin/Bin
--------------------------------------------------------------------------------
library lib-common-test
    import:             common-properties
    exposed-modules:
        TiredPixel.Common.Snap.Test
    other-modules:
        TiredPixel.Common.Snap.TestUtils
    build-depends:
        lib-common,
        --
        aeson,
        base64-bytestring,
        bytestring,
        containers,
        directory,
        filepath,
        hspec                           ==  2.*,
        hspec-core,
        hspec-snap,
        http-link-header,
        lens,
        lens-aeson,
        mtl,
        network-uri,
        process,
        snap-core,
        text,
        unordered-containers,
        vector,
    hs-source-dirs:
        lib/common/test
--------------------------------------------------------------------------------
test-suite test-isoxya-plugin-elasticsearch
    import:             common-properties
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    other-modules:
        Isoxya.Plugin.Elasticsearch.Test
        Isoxya.Plugin.Elasticsearch.Zone.ApexSpec
        Isoxya.Plugin.Elasticsearch.Zone.DataSpec
    build-depends:
        lib-common,
        lib-common-test,
        lib-isoxya-plugin-elasticsearch,
        --
        bytestring,
        hspec                           ==  2.*,
        network-uri,
        text,
        time,
    default-extensions:
        NoImplicitPrelude
    hs-source-dirs:
        test
    build-tool-depends:
        hspec-discover:hspec-discover   ==  2.*
