cabal-version:          3.0
name:                   isoxya-plugin-elasticsearch
version:                0.0.0
synopsis:               Isoxya plugin Elasticsearch
license:                BSD-3-Clause
author:                 Nic Williams <tp@tiredpixel.com>
maintainer:             Nic Williams <tp@tiredpixel.com>
--------------------------------------------------------------------------------
common common-properties
    build-depends:
        base                            ^>= 4.14.3.0,
        relude
    mixins:
        base                            hiding (Prelude),
        relude                          (Relude as Prelude)
    default-language:   Haskell2010
    default-extensions:
        OverloadedStrings
    ghc-options:
        -Wall
        -Werror
        -Wunused-packages
--------------------------------------------------------------------------------
library lib-common
    import:             common-properties
    exposed-modules:
        TiredPixel.Common.Isoxya.Snap.Streamer
        TiredPixel.Common.Isoxya.Streamer
        TiredPixel.Common.Net
        TiredPixel.Common.Snap.CoreUtil
        TiredPixel.Common.Snap.Main
        TiredPixel.Common.URI
    other-modules:
        TiredPixel.Common.Cursor
    build-depends:
        aeson,
        bytestring,
        conduit,
        conduit-extra,
        http-conduit,
        http-types,
        network-uri,
        regex-compat,
        resourcet,
        safe,
        snap-core,
        snap-extras,
        snap-server,
        time,
        unix,
        unordered-containers,
    hs-source-dirs:
        lib/common/src
--------------------------------------------------------------------------------
library lib-isoxya-plugin-elasticsearch
    import:             common-properties
    exposed-modules:
        Isoxya.Plugin.Elasticsearch
        Isoxya.Plugin.Elasticsearch.Core
    other-modules:
        Isoxya.Plugin.Elasticsearch.Endpoint.Apex
        Isoxya.Plugin.Elasticsearch.Endpoint.Data
        Isoxya.Plugin.Elasticsearch.Init
        Isoxya.Plugin.Elasticsearch.Resource
        Isoxya.Plugin.Elasticsearch.Type
        Paths_isoxya_plugin_elasticsearch
    build-depends:
        aeson,
        bytestring,
        cryptonite,
        http-conduit,
        http-types,
        lens,
        lens-aeson,
        lib-common,
        network-uri,
        scientific,
        snap,
        snap-core,
        snap-extras,
        text,
        time,
        vector,
    hs-source-dirs:
        src
--------------------------------------------------------------------------------
executable isoxya-plugin-elasticsearch
    import:             common-properties
    main-is:            Elasticsearch.hs
    other-modules:
        Paths_isoxya_plugin_elasticsearch
    build-depends:
        lens,
        lib-common,
        lib-isoxya-plugin-elasticsearch,
        network-uri,
        snap,
    hs-source-dirs:
        src/Isoxya/Plugin/Bin
--------------------------------------------------------------------------------
library lib-common-test
    import:             common-properties
    exposed-modules:
        TiredPixel.Common.Snap.Test
    other-modules:
        TiredPixel.Common.Snap.TestUtil
    build-depends:
        aeson,
        base64-bytestring,
        bytestring,
        containers,
        directory,
        filepath,
        hspec                           ==  2.*,
        hspec-core,
        hspec-snap,
        http-link-header,
        lens,
        lens-aeson,
        mtl,
        network-uri,
        process,
        snap-core,
        text,
        unordered-containers,
        vector,
    hs-source-dirs:
        lib/common/test
--------------------------------------------------------------------------------
test-suite test-isoxya-plugin-elasticsearch
    import:             common-properties
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    other-modules:
        Isoxya.Plugin.Elasticsearch.Endpoint.ApexSpec
        Isoxya.Plugin.Elasticsearch.Endpoint.DataSpec
        Isoxya.Plugin.Elasticsearch.Test
    build-depends:
        bytestring,
        hlint,
        hspec                           ==  2.*,
        lib-common,
        lib-common-test,
        lib-isoxya-plugin-elasticsearch,
        network-uri,
        stylish-haskell,
        text,
        time,
    default-extensions:
        NoImplicitPrelude
    hs-source-dirs:
        test
    ghc-options:
        -Wno-error=unused-packages
    build-tool-depends:
        hspec-discover:hspec-discover   ==  2.*
