cabal-version:          2.4
name:                   isx-pipe-elasticsearch
version:                1.1
synopsis:               Isoxya Pipeline Elasticsearch
license:                BSD-3-Clause
license-file:           LICENSE
author:                 Pavouk OÜ
maintainer:             en@pavouk.tech
build-type:             Simple
extra-source-files:     README.md
--------------------------------------------------------------------------------
common shared-properties
    default-language:   Haskell2010
    default-extensions:
        OverloadedStrings
    ghc-options:
        -Wall
        -ddump-minimal-imports
--------------------------------------------------------------------------------
library pvk-com
    import:             shared-properties
    exposed-modules:
        PVK.Com.API.Aeson
        PVK.Com.API.Req
        PVK.Com.API.Res
        PVK.Com.API.Resource.CommonError
        PVK.Com.API.Resource.ISXPipe
        PVK.Com.API.Resource.ISXPipeSnap
        PVK.Com.API.Zone.Common.Error
        PVK.Com.Net
    other-modules:
        PVK.Com.API.Ext.URI
        Prelude
    build-depends:
        base-noprelude                  ==  4.12.*,
        relude,
        --
        aeson,
        http-conduit,
        network-uri,
        snap-core,
        snap-extras,
        time,
        unordered-containers,
        vector
    hs-source-dirs:
        lib/pvk-com/src

library isx-pipe-elasticsearch-int
    import:             shared-properties
    exposed-modules:
        ISX.Pipe.Elasticsearch.Route
        ISX.Pipe.Elasticsearch.Zone.Common.Apex
        ISX.Pipe.Elasticsearch.Zone.Common.Data
    other-modules:
        ISX.Pipe.Elasticsearch.Resource.Common
        Prelude
    build-depends:
        base-noprelude                  ==  4.12.*,
        relude,
        --
        pvk-com,
        --
        aeson,
        cryptonite,
        http-conduit,
        http-types,
        lens,
        lens-aeson,
        network-uri,
        scientific,
        snap-core,
        snap-extras,
        text,
        time,
        vector
    hs-source-dirs:
        src
--------------------------------------------------------------------------------
executable isx-pipe-elasticsearch
    import:             shared-properties
    main-is:            Main.hs
    other-modules:
        Prelude
    build-depends:
        base-noprelude                  ==  4.12.*,
        relude,
        --
        pvk-com,
        isx-pipe-elasticsearch-int,
        --
        network-uri,
        snap-server
    hs-source-dirs:
        src/ISX/Pipe/Elasticsearch/Bin
    ghc-options:
        -threaded
--------------------------------------------------------------------------------
library pvk-com-test
    import:             shared-properties
    exposed-modules:
        PVK.Com.API.Test
    other-modules:
        Prelude
    build-depends:
        base-noprelude                  ==  4.12.*,
        relude,
        --
        pvk-com,
        --
        aeson,
        base64-bytestring,
        bytestring,
        hspec                           ==  2.*,
        http-link-header,
        lens,
        lens-aeson,
        snap-core
    hs-source-dirs:
        lib/pvk-com/test

test-suite isx-pipe-elasticsearch-test
    import:             shared-properties
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    other-modules:
        ISX.Pipe.Elasticsearch.Zone.Common.ApexSpec
        ISX.Pipe.Elasticsearch.Zone.Common.DataSpec
        ISX.Test
        Prelude
    build-depends:
        base-noprelude                  ==  4.12.*,
        relude,
        --
        isx-pipe-elasticsearch-int,
        pvk-com,
        pvk-com-test,
        --
        containers,
        hspec                           ==  2.*,
        network-uri,
        vector
    hs-source-dirs:
        test
    build-tool-depends:
        hspec-discover:hspec-discover   ==  2.*
    ghc-options:
        -threaded
--------------------------------------------------------------------------------
