cabal-version:          3.0
name:                   isx-plug-elasticsearch
version:                0.0.0
synopsis:               Isoxya Plugin Elasticsearch
license:                BSD-3-Clause
license-file:           LICENSE
author:                 Nic Williams <tp@tiredpixel.com>
maintainer:             Nic Williams <tp@tiredpixel.com>
build-type:             Simple
extra-source-files:     README.md
--------------------------------------------------------------------------------
common shared-properties
    build-depends:
        base                            ==  4.13.*,
        relude
    mixins:
        base                            hiding (Prelude),
        relude                          (Relude as Prelude)
    default-language:   Haskell2010
    default-extensions:
        OverloadedStrings
    ghc-options:
        -Wall
        -ddump-minimal-imports
--------------------------------------------------------------------------------
library common-ce
    import:             shared-properties
    exposed-modules:
        TPX.Com.API.Aeson
        TPX.Com.API.Ext.URI
        TPX.Com.API.Req
        TPX.Com.API.Res
        TPX.Com.API.Resource.CommonError
        TPX.Com.API.Resource.ISX.Strm
        TPX.Com.API.Resource.ISX.StrmSnap
        TPX.Com.Net
    build-depends:
        aeson,
        http-conduit,
        http-types,
        network-uri,
        snap-core,
        snap-extras,
        time,
        unix,
        unordered-containers
    hs-source-dirs:
        lib/common-ce/src

library isx-plug-elasticsearch-int
    import:             shared-properties
    exposed-modules:
        ISX.Plug.Elasticsearch.Route
        ISX.Plug.Elasticsearch.Zone.Common.Apex
        ISX.Plug.Elasticsearch.Zone.Common.Data
    other-modules:
        ISX.Plug.Elasticsearch.Resource.Common
        Paths_isx_plug_elasticsearch
    build-depends:
        common-ce,
        --
        aeson,
        bytestring,
        cryptonite,
        http-conduit,
        http-types,
        lens,
        lens-aeson,
        network-uri,
        scientific,
        snap-core,
        snap-extras,
        text,
        time,
        vector
    hs-source-dirs:
        src
--------------------------------------------------------------------------------
executable isx-plug-elasticsearch
    import:             shared-properties
    main-is:            Main.hs
    build-depends:
        common-ce,
        isx-plug-elasticsearch-int,
        --
        network-uri,
        snap-server
    hs-source-dirs:
        src/ISX/Plug/Elasticsearch/Bin
    ghc-options:
        -threaded
--------------------------------------------------------------------------------
library common-ce-test
    import:             shared-properties
    exposed-modules:
        TPX.Com.API.Test
    build-depends:
        common-ce,
        --
        aeson,
        hspec                           ==  2.*,
        lens,
        lens-aeson,
        snap-core
    mixins:
        relude                          (Relude.Unsafe)
    hs-source-dirs:
        lib/common-ce/test

test-suite isx-plug-elasticsearch-test
    import:             shared-properties
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    other-modules:
        ISX.Plug.Elasticsearch.Zone.Common.ApexSpec
        ISX.Plug.Elasticsearch.Zone.Common.DataSpec
        ISX.Test
    build-depends:
        isx-plug-elasticsearch-int,
        common-ce,
        common-ce-test,
        --
        containers,
        hspec                           ==  2.*,
        network-uri,
        text,
        vector
    hs-source-dirs:
        test
    build-tool-depends:
        hspec-discover:hspec-discover   ==  2.*
    ghc-options:
        -threaded
--------------------------------------------------------------------------------
