cabal-version:          3.0
name:                   isx-plug-elasticsearch
version:                0.0.0
synopsis:               Isoxya plugin: Elasticsearch
license:                BSD-3-Clause
author:                 Nic Williams <tp@tiredpixel.com>
maintainer:             Nic Williams <tp@tiredpixel.com>
build-type:             Simple
--------------------------------------------------------------------------------
common common-properties
    build-depends:
        base                            ==  4.13.*,
        relude
    mixins:
        base                            hiding (Prelude),
        relude                          (Relude as Prelude)
    default-language:   Haskell2010
    default-extensions:
        OverloadedStrings
    ghc-options:
        -Wall
        -ddump-minimal-imports
--------------------------------------------------------------------------------
library lib-isx-plug-elasticsearch
    import:             common-properties
    exposed-modules:
        ISX.Plug.Elasticsearch.Route
        TPX.Com.API.Aeson
        TPX.Com.API.Res
        TPX.Com.Net
    other-modules:
        ISX.Plug.Elasticsearch.Resource
        ISX.Plug.Elasticsearch.Zone.Apex
        ISX.Plug.Elasticsearch.Zone.Data
        Paths_isx_plug_elasticsearch
        TPX.Com.API.Req
        TPX.Com.API.Resource
        TPX.Com.ISX.PlugStrm
        TPX.Com.ISX.PlugStrmSnap
        TPX.Com.URI
    build-depends:
        aeson,
        bytestring,
        cryptonite,
        http-conduit,
        http-types,
        lens,
        lens-aeson,
        network-uri,
        scientific,
        snap-core,
        snap-extras,
        text,
        time,
        unix,
        unordered-containers,
        vector,
    hs-source-dirs:
        lib/common-ce/src
        src
--------------------------------------------------------------------------------
executable isx-plug-elasticsearch
    import:             common-properties
    main-is:            Elasticsearch.hs
    other-modules:
        Paths_isx_plug_elasticsearch
    build-depends:
        lib-isx-plug-elasticsearch,
        --
        network-uri,
        snap-server,
    hs-source-dirs:
        src/ISX/Plug/Bin
    ghc-options:
        -threaded
--------------------------------------------------------------------------------
library common-ce-test
    import:             common-properties
    exposed-modules:
        TPX.Com.API.Test
    build-depends:
        lib-isx-plug-elasticsearch,
        --
        aeson,
        bytestring,
        directory,
        filepath,
        hspec                           ==  2.*,
        http-link-header,
        lens,
        lens-aeson,
        network-uri,
        snap-core,
    mixins:
        relude                          (Relude.Unsafe)
    hs-source-dirs:
        lib/common-ce/test
--------------------------------------------------------------------------------
test-suite test-isx-plug-elasticsearch
    import:             common-properties
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    other-modules:
        ISX.Plug.Elasticsearch.Zone.ApexSpec
        ISX.Plug.Elasticsearch.Zone.DataSpec
        ISX.Test
    build-depends:
        common-ce-test,
        lib-isx-plug-elasticsearch,
        --
        containers,
        hspec                           ==  2.*,
        network-uri,
        text,
        vector,
    hs-source-dirs:
        test
    build-tool-depends:
        hspec-discover:hspec-discover   ==  2.*
    ghc-options:
        -threaded
--------------------------------------------------------------------------------
