cabal-version:          3.0
name:                   isx-plug-elasticsearch
version:                0.0.0
synopsis:               Isoxya plugin: Elasticsearch
license:                BSD-3-Clause
author:                 Nic Williams <tp@tiredpixel.com>
maintainer:             Nic Williams <tp@tiredpixel.com>
build-type:             Simple
--------------------------------------------------------------------------------
common common-properties
    build-depends:
        base                            ==  4.13.*,
        relude
    mixins:
        base                            hiding (Prelude),
        relude                          (Relude as Prelude)
    default-language:   Haskell2010
    default-extensions:
        OverloadedStrings
    ghc-options:
        -Wall
        -ddump-minimal-imports
--------------------------------------------------------------------------------
library lib-common-ce
    import:             common-properties
    exposed-modules:
        --TPX.Com.Cursor
        --TPX.Com.Isoxya.PlugProc
        --TPX.Com.Isoxya.PlugStrm
        --TPX.Com.Net
        --TPX.Com.Snap.CoreUtils
        --TPX.Com.URI
    build-depends:
        aeson,
        base64-bytestring,
        bytestring,
        conduit,
        conduit-extra,
        http-conduit,
        http-types,
        network-uri,
        regex-compat,
        resourcet,
        safe,
        snap-core,
        snap-extras,
        snap-server,
        time,
        unix,
        unordered-containers,
    hs-source-dirs:
        lib/common-ce/src
--------------------------------------------------------------------------------
library lib-isx-plug-elasticsearch
    import:             common-properties
    exposed-modules:
    other-modules:
        Paths_isx_plug_elasticsearch
        --
        ISX.Plug.Elasticsearch
        ISX.Plug.Elasticsearch.Core
        ISX.Plug.Elasticsearch.Init
        ISX.Plug.Elasticsearch.Resource
        ISX.Plug.Elasticsearch.Types
        ISX.Plug.Elasticsearch.Zone.Apex
        ISX.Plug.Elasticsearch.Zone.Data
    build-depends:
        lib-common-ce,
        --
        aeson,
        bytestring,
        cryptonite,
        http-conduit,
        http-types,
        lens,
        lens-aeson,
        network-uri,
        scientific,
        snap,
        snap-core,
        snap-extras,
        snap-server,
        text,
        time,
        unix,
        unordered-containers,
        vector,
    hs-source-dirs:
        src
--------------------------------------------------------------------------------
executable isx-plug-elasticsearch
    import:             common-properties
    main-is:            Elasticsearch.hs
    other-modules:
        Paths_isx_plug_elasticsearch
    build-depends:
        lib-common-ce,
        lib-isx-plug-elasticsearch,
        --
        lens,
        network-uri,
        snap,
    hs-source-dirs:
        src/ISX/Plug/Bin
    ghc-options:
        -threaded
--------------------------------------------------------------------------------
library lib-common-ce-test
    import:             common-properties
    exposed-modules:
        TPX.Com.Snap.Test
    other-modules:
        TPX.Com.Snap.TestUtils
    build-depends:
        lib-common-ce,
        --
        aeson,
        base64-bytestring,
        bytestring,
        containers,
        directory,
        filepath,
        hspec                           ==  2.*,
        hspec-core,
        hspec-snap,
        http-link-header,
        lens,
        lens-aeson,
        mtl,
        network-uri,
        process,
        snap-core,
        text,
        unordered-containers,
        vector,
    hs-source-dirs:
        lib/common-ce/test
--------------------------------------------------------------------------------
test-suite test-isx-plug-elasticsearch
    import:             common-properties
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    other-modules:
        ISX.Plug.Elasticsearch.Test
        ISX.Plug.Elasticsearch.Zone.ApexSpec
        ISX.Plug.Elasticsearch.Zone.DataSpec
    build-depends:
        lib-common-ce,
        lib-common-ce-test,
        lib-isx-plug-elasticsearch,
        --
        bytestring,
        hspec                           ==  2.*,
        network-uri,
        text,
        time,
    default-extensions:
        NoImplicitPrelude
    hs-source-dirs:
        test
    build-tool-depends:
        hspec-discover:hspec-discover   ==  2.*
    ghc-options:
        -threaded
--------------------------------------------------------------------------------
