cabal-version:          3.0
name:                   isx-plugin-elasticsearch
version:                0.0.0
synopsis:               Isoxya Plugin Elasticsearch
license:                NONE
license-file:           LICENSE
author:                 tiredpixel
maintainer:             tiredpixel
build-type:             Simple
extra-source-files:     README.md
--------------------------------------------------------------------------------
common shared-properties
    build-depends:
        base                            ==  4.13.*,
        relude
    mixins:
        base                            hiding (Prelude),
        relude                          (Relude as Prelude)
    default-language:   Haskell2010
    default-extensions:
        OverloadedStrings
    ghc-options:
        -Wall
        -ddump-minimal-imports
--------------------------------------------------------------------------------
library common
    import:             shared-properties
    exposed-modules:
        TPX.Com.API.Aeson
        TPX.Com.API.Ext.URI
        TPX.Com.API.Req
        TPX.Com.API.Res
        TPX.Com.API.Resource.CommonError
        TPX.Com.API.Resource.ISX.Pipe
        TPX.Com.API.Resource.ISX.PipeSnap
        TPX.Com.Net
    other-modules:
        TPX.Com.URL
    build-depends:
        aeson,
        bytestring,
        conduit,
        conduit-extra,
        http-conduit,
        http-types,
        network-uri,
        regex-compat,
        resourcet,
        snap-core,
        snap-extras,
        text,
        time,
        unix,
        unordered-containers
    hs-source-dirs:
        lib/common/src

library isx-plugin-elasticsearch-int
    import:             shared-properties
    exposed-modules:
        ISX.Plugin.Elasticsearch.Route
        ISX.Plugin.Elasticsearch.Zone.Common.Apex
        ISX.Plugin.Elasticsearch.Zone.Common.Data
    other-modules:
        ISX.Plugin.Elasticsearch.Resource.Common
        Paths_isx_plugin_elasticsearch
    build-depends:
        common,
        --
        aeson,
        bytestring,
        cryptonite,
        http-conduit,
        http-types,
        lens,
        lens-aeson,
        network-uri,
        scientific,
        snap-core,
        snap-extras,
        text,
        time,
        vector
    hs-source-dirs:
        src
--------------------------------------------------------------------------------
executable isx-plugin-elasticsearch
    import:             shared-properties
    main-is:            Main.hs
    build-depends:
        common,
        isx-plugin-elasticsearch-int,
        --
        network-uri,
        snap-server
    hs-source-dirs:
        src/ISX/Plugin/Elasticsearch/Bin
    ghc-options:
        -threaded
--------------------------------------------------------------------------------
library common-test
    import:             shared-properties
    exposed-modules:
        TPX.Com.API.Test
    build-depends:
        common,
        --
        aeson,
        base64-bytestring,
        bytestring,
        directory,
        filepath,
        hspec                           ==  2.*,
        http-link-header,
        lens,
        lens-aeson,
        snap-core
    mixins:
        relude                          (Relude.Unsafe)
    hs-source-dirs:
        lib/common/test

test-suite isx-plugin-elasticsearch-test
    import:             shared-properties
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    other-modules:
        ISX.Plugin.Elasticsearch.Zone.Common.ApexSpec
        ISX.Plugin.Elasticsearch.Zone.Common.DataSpec
        ISX.Test
    build-depends:
        isx-plugin-elasticsearch-int,
        common,
        common-test,
        --
        containers,
        hspec                           ==  2.*,
        network-uri,
        text,
        vector
    hs-source-dirs:
        test
    build-tool-depends:
        hspec-discover:hspec-discover   ==  2.*
    ghc-options:
        -threaded
--------------------------------------------------------------------------------
